--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -1,8 +1,15 @@
-<section>
-    <h1>TOP SELLERS</h1>
-    <img src="" alt="">
-    <img src="" alt="">
-    <img src="" alt="">
-    <p>Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
-    <button type="button">Buy now   </button>
+<section class="top-sellers">
+    <div class="container ">
+    <h2 class="top-sells">TOP 
+       <span class="top-sells-logo">SELLERS</span> </h2>
+    <ul class=sells>
+        <img class="top-sellers-image" src="../img/top-sellers/img01-1200.jpg" alt="food">
+        <img class="top-sellers-images" src="../img/top-sellers/img02-1200.jpg" alt="food">
+        <img class="top-sellers-images" src="../img/top-sellers/img03-1200.jpg" alt="food">
+    </ul>
+    <div class="top-sellers-info">
+    <p class="top-sellers-text">Crazy enough chocolate originates from a bean just like the coffee bean called Cacao. Cacao has been around for thousands of years and was first discovered by the Native American tribe called the Mayans.</p>
+    <button class="hero-btn " type="button">Buy now</button>
+    </div>
+    </div>
 </section>
