--- a/src/css/buy-now.css
+++ b/src/css/buy-now.css
@@ -1,1 +1,414 @@
-/* Modal Window - Buy Now */
+dialog {
+  width: 100%;
+  max-width: 700px;
+  border: none;
+  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.4);
+  animation: fadeIn 250ms ease-in-out;
+}
+
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(5px);
+}
+
+dialog .close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 18px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .modal-close {
+    right: 24px;
+    top: 24px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .order-modal_window {
+    width: 609px;
+  }
+}
+
+.order-modal_window-close {
+  position: absolute;
+  top: 14px;
+  right: 14px;
+  width: 28px;
+  height: 28px;
+  background-color: transparent;
+  border: none;
+  border-radius: 50%;
+  margin: 0;
+  cursor: pointer;
+  transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.order-modal_window-close-icon {
+  display: block;
+  position: absolute;
+  width: 24px;
+  height: 24px;
+  fill: currentColor;
+  border-radius: 50%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.order-modal_window-close-icon:hover,
+.order-modal_window-close-icon:focus {
+  color: #fd9222;
+  background-color: #fcf1e0;
+}
+
+.order-modal-title {
+  margin-top: 0;
+  margin-bottom: 32px;
+  text-align: center;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: -0.03em;
+  text-transform: uppercase;
+  color: #111111;
+}
+
+.akcent-title {
+  color: #fd9222;
+}
+.order-swiper-wrapper {
+  width: 100%;
+  margin: 0 auto;
+  margin-bottom: 60px;
+}
+
+.order-swiper-wrapper .slick-dotted.slick-slider {
+  margin-bottom: 0;
+}
+
+.order-swiper-wrapper .slick-dots {
+  /* reset pagination */
+  height: 13px;
+  bottom: -27px;
+  transform: none;
+}
+
+.order-swiper-wrapper .slick-dotted.slick-slider {
+  margin-bottom: 60px;
+}
+
+.order-swiper-slide {
+  width: 231px;
+  height: 257px;
+  margin: 0 auto;
+  border-radius: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .order-swiper-slide {
+    width: 160px;
+    height: 196px;
+  }
+}
+
+.order-slider-card {
+  height: 100%;
+  background-color: #ffffff;
+  border-radius: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .order-slider-card {
+    width: 160px;
+    background-color: #ffffff;
+  }
+}
+
+.order-slider-image {
+  position: relative;
+  padding: 32px 32px 28px 32px;
+  height: 100%;
+  border: 1px solid rgba(17, 17, 17, 0.1);
+  border-radius: 15px;
+  cursor: pointer;
+}
+
+@media screen and (min-width: 768px) {
+  .order-slider-image {
+    padding: 24px 20px 0 20px;
+  }
+}
+
+.weight-selection {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  padding: 8px 0px;
+  width: 97px;
+  font-weight: 600;
+  border-radius: 100px;
+  cursor: pointer;
+  background: #fafafa;
+  border: 1px solid rgba(17, 17, 17, 0.1);
+}
+
+.weight-selection:hover,
+.weight-selection:focus {
+  background-color: #fcf1e0;
+}
+
+@media screen and (min-width: 768px) {
+  .weight-selection {
+    font-size: 14px;
+    line-height: 1.21;
+  }
+}
+
+.slider-demonstrate {
+  width: 167px;
+  max-width: 100%;
+  margin: 0 auto;
+  border-radius: 15px;
+}
+
+@media screen and (min-width: 768px) {
+  .slider-demonstrate {
+    width: 120px;
+  }
+}
+
+.order-slider .swiper-pagination {
+  bottom: 0;
+}
+
+.order-slider .swiper-pagination-bullet {
+  width: 13px;
+  height: 13px;
+  background-color: #fd9222;
+  background: rgba(17, 17, 17, 0.553);
+}
+
+.order-slider .swiper-pagination-bullet-active {
+  width: 28px;
+  height: 13px;
+  border-radius: 32px;
+  background: #fd9222;
+}
+
+.order-modal-form {
+  top: 32px;
+}
+.customer-form-phone-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-top: 8px;
+}
+.form-field-tablet {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.form-field {
+  width: 100%;
+  margin-bottom: 18px;
+}
+
+.customer-form-label {
+  display: block;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+  color: #111111;
+}
+
+.customer-form-input {
+  width: 100%;
+  height: 40px;
+  margin-top: 8px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  background-color: #fafafa;
+  border-radius: 8px;
+  padding: 14px 18px 14px 18px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customer-form-input::placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.21;
+  letter-spacing: -0.02em;
+  color: rgba(64, 64, 64, 0.3);
+}
+
+.customer-form-input:hover,
+.customer-form-input:focus {
+  outline: none;
+  border-color: #fd9222;
+}
+
+.customer-form-input_for-number {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 8px;
+  background-color: #fafafa;
+  padding-left: 106px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.customer-form-input_for_pay {
+  position: relative;
+}
+
+@media screen and (min-width: 768px) {
+  .customer-form-input_for-number {
+    padding-left: 177px;
+  }
+}
+
+.customer-form-input_for-number::placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.21;
+  letter-spacing: -0.02em;
+  color: rgba(64, 64, 64, 0.3);
+}
+
+.customer-form-input_for-number:focus {
+  outline: none;
+  border-color: #fd9222;
+}
+
+.country-code {
+  margin-top: 4px;
+  display: block;
+  position: relative;
+}
+
+.code-input {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  top: 8px;
+  height: 25px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 18px;
+  padding-right: 8px;
+  border-right: 1.5px solid rgba(33, 33, 33, 0.2);
+}
+
+.ua-code {
+  padding-left: 8px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1/21;
+  color: #111111;
+}
+
+@media screen and (min-width: 768px) {
+  .code-input {
+    padding-right: 18px;
+    border-right: 3px solid rgba(33, 33, 33, 0.2);
+  }
+
+  .ua-code {
+    padding-left: 18px;
+  }
+}
+
+.card-code {
+  /* margin-top: 4px; */
+  display: block;
+  position: relative;
+}
+
+.mastercard-icon {
+  position: absolute;
+  display: block;
+  top: 18px;
+  right: 16px;
+}
+
+.comment-input {
+  resize: none;
+  padding: 8px 16px;
+  width: 100%;
+  margin-top: 8px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.2;
+  letter-spacing: 0.04em;
+  color: black;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 8px;
+  background-color: #fafafa;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.comment-input::placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.21;
+  letter-spacing: -0.02em;
+  color: rgba(64, 64, 64, 0.3);
+}
+
+.comment-input:focus {
+  outline: none;
+  border-color: #fd9222;
+}
+
+.modal-button-brand {
+  margin-top: 18px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  padding: 12px 28px;
+  max-width: 133px;
+  height: 41px;
+  color: #ffffff;
+  background: #fd9222;
+  border-radius: 100px;
+  border: none;
+  transition-property: color, background-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button-brand:hover {
+  color: #fd9222;
+  background-color: #fcf1e0;
+}
+
+/* MODAL TABLET */
+@media screen and (min-width: 768px) {
+  .form-field-tablet {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 21px;
+  }
+}
