--- a/src/partials/buy-now.html
+++ b/src/partials/buy-now.html
@@ -1,1 +1,151 @@
-<section></section>
+
+<div>
+    <dialog data-modal="modal2">
+      <button class="order-modal_window-close">&times; <svg class=".order-modal_window-close-icon">
+        <use href="./src/img/sprite.svg#iconx-close"> </use>
+      </svg>
+    </button>
+    <h3 class="order-modal-title"><span class="akcent-title">Buy</span> now</h3>
+
+    <div class="order-swiper-wrapper responsive-sellers">
+      <div class="order-swiper-slide">
+        <div class="order-slider-card">
+          <div class="order-slider-image">
+            <img
+              class="slider-demonstrate"
+              srcset="/img/buy-now/first-all-2x.jpg 2x"
+              src="./img/buy-now/first-min.jpg"
+              alt="kinder-chocolate-white-chocolate-chocolate-nuts"
+              width="167"
+              height="148"
+            />
+            <div class="weight-selection">100 g</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="order-swiper-slide">
+        <div class="order-slider-card">
+          <div class="order-slider-image">
+            <img
+              class="slider-demonstrate"
+              srcset="./img/buy-now/second-all-2x.jpg 2x"
+              src="./img/buy-now/second-min.jpg"
+              alt="white-chocolate-cocoa-bean-chocolate-cake"
+              width="167"
+              height="148"
+            />
+            <div class="weight-selection">200 g</div>
+          </div>
+        </div>
+      </div>
+
+      <div class="order-swiper-slide">
+        <div class="order-slider-card">
+          <div class="order-slider-image">
+            <img
+              class="slider-demonstrate"
+              srcset="./img/buy-now/third-all-2x.jpg 2x"
+              src="./img/buy-now/third-min.jpg"
+              alt="dark-chocolate"
+              width="167"
+              height="148"
+            />
+            <div class="weight-selection">300 g</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <form class="order-modal-form">
+      <div class="customer-form-field">
+        <div class="form-field">
+          <label for="name" class="customer-form-label"
+            >Personal information
+          </label>
+          <div class="form-field-tablet">
+            <input
+              type="text"
+              class="customer-form-input"
+              name="name"
+              id="name"
+              placeholder="Name"
+            />
+            <input
+              type="text"
+              class="customer-form-input"
+              name="surname"
+              id="surname"
+              placeholder="Surname"
+            />
+          </div>
+        </div>
+        <div class="form-field">
+          <label for="mail" class="customer-form-label"
+            >Email
+            <input
+              type="email"
+              class="customer-form-input"
+              name="mail"
+              id="mail"
+              placeholder="Enter your email"
+              required
+            />
+          </label>
+        </div>
+        <div class="form-field">
+          <label for="phone" class="customer-form-label">Phone number </label>
+          <div class="customer-form-phone-wrapper">
+            <div class="phone-inner">
+              <svg class="phone-inner-icon">
+                <use href="./src/img/sprite.svg#icon-ukraine-flag"></use>
+              </svg>
+              <span class="phone-inner-code">+380</span>
+            </div>
+            <input
+              type="tel"
+              class="customer-form-input_for-number"
+              name="phone"
+              id="phone"
+              placeholder="Phone number"
+            />
+          </div>
+        </div>
+        <div class="form-field">
+          <label for="number" class="customer-form-label">Card number </label>
+          <div class="customer-form-input_for_pay">
+            <input
+              type="number"
+              class="customer-form-input"
+              name="number"
+              id="number"
+              placeholder="Enter card"
+            />
+            <svg class="mastercard-icon" width="32" height="21">
+              <use href="./src/img/sprite.svg#iconMastercard"></use>
+            </svg>
+          </div>
+        </div>
+        <div class="form-field">
+          <label for="comment" class="customer-form-label">Comment</label>
+          <textarea
+            class="comment-input"
+            name="comment"
+            id="comment"
+            rows="4"
+            placeholder="Enter text"
+          ></textarea>
+        </div>
+        <div class="button-field">
+          <button
+            type="submit"
+            class="modal-button-brand"
+            id="sellers-button-1"
+          >
+            Submit
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
