--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -6,7 +6,7 @@
       pure delight!
     </p>
     <div class="hero-buttons">
-      <button class="hero-btn">Buy now</button>
+      <button data-modal-open="modal2" class="hero-btn">Buy now</button>
       <a href="#how-its-made" class="hero-btn hero-how-it">How it's made</a>
       <a href="#footer" class="hero-scroll"
         >scroll down
