--- a/src/partials/leave-a-review.html
+++ b/src/partials/leave-a-review.html
@@ -5,19 +5,24 @@
                 <use href="../img/sprite.svg#icon-close-modal24"></use>
             </svg></button>
             <div class="modal-form-wrap-leave-a-review">
-                <p class="modal-form-leave-a-review-title">leave a review 
-                    about our chocolate</p>
+                <p class="modal-form-leave-a-review-title section-title">leave a review 
+                    about <span class="modal-leave-a-review-span">our chocolate</span> </p>
                     <form class="modal-form-leave-a-review">
                         <label class="modal-form-leave-a-review-field" >
                              
                             <input class="modal-form-leave-a-review-input" 
+                            placeholder="Name"
                             required
                             name="user_name"
-                            type="text">
+                            type="text"
+                            pattern="^[a-zA-Zа-яА-Я]+"
+                            minlength="2"
+                            >
                         </label>
                         <label class="modal-form-leave-a-review-field" >
                            
                            <input class="modal-form-leave-a-review-input" 
+                           placeholder="Enter your email"
                            required
                            name="user-mail"
                            type="text">
@@ -25,14 +30,18 @@
                        <label class="modal-form-leave-a-review-field" >
                        
                        <input class="modal-form-leave-a-review-input" 
+                       placeholder="Phone number"
                        required
                        name="user-phone"
-                       type="tel">
+                       type="tel"
+                       pattern="[0-9]{3}-[0-9][3]-[0-9]{2}-[0-9]{2}"
+                       title="xxx-xxx-xx-xx">
                    </label>
                    <label class="modal-form-leave-a-review-field" >
                    <textarea
-                   name="" 
-                   id="" 
+                   required
+                   name="user_message" 
+                 class="modal-form-leave-a-review-message"
                    placeholder="Enter text"></textarea>
                </label>
                <button class="modal-form-leave-a-review" type="submit">Send</button>
