--- a/src/css/header.css
+++ b/src/css/header.css
@@ -21,6 +21,32 @@
   display: flex;
 }
 
+.header-item-link {
+  display: inline-block;
+}
+
+.header-item-link:after {
+  content: '';
+
+  position: relative;
+  top: 8px;
+  display: block;
+  width: 100%;
+  height: 0;
+  border: 1px solid var(--main-accent-color);
+  background-color: var(--main-accent-color);
+
+  transition-property: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+}
+
+.header-item-link:hover:after,
+.header-item-link:focus:after {
+  opacity: 1;
+}
+
 @media screen and (min-width: 375px) {
   .container {
     width: 365px;
@@ -171,6 +197,7 @@
     gap: 19px;
     margin-left: 21.83px;
     margin-top: auto;
+    margin-bottom: 21.85px;
   }
 
   .header-sidebar-promo {
