--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -28,7 +28,7 @@
       </li>
     </ul>
   </nav>
-  <button type="header-button" class="header-mobile-menu-open" data-modal-open>
+  <button class="header-mobile-menu-open" data-modal-open>
     <svg class="header-mobile-menu-open-icon">
       <use href="/img/sprite.svg#icon-mob-burger"></use>
     </svg>
