--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -3,7 +3,7 @@
     <div class="footer-wrap-wrap">
       <div class="title-wrap">
         <h2 class="footer-title">
-          <span class="section-title-accent">Chocolate</span> a delicious cure
+          <span class="footer-title-accent">Chocolate</span> a delicious cure
           for a bad day
         </h2>
       </div>
