--- a/src/css/leave-a-review.css
+++ b/src/css/leave-a-review.css
@@ -1,10 +1,10 @@
 /* Leave-A-Review Modal Window */
-/* Leave-A-Review Modal Window */
+
 .leave-a-review {
 }
 .overlay-leave-a-review {
-    opacity: 0;
-   visibility: hidden;
+    /* opacity: 0;
+   visibility: hidden; */
 
     position: fixed;
     top: 0;
@@ -55,6 +55,7 @@ fill: var(--main-accent-color);
 .modal-form-leave-a-review{
     display: block;
 }
+
 .modal-form-leave-a-review-title.section-title{
     text-align: left;
     margin-bottom: 32px;
@@ -63,23 +64,83 @@ fill: var(--main-accent-color);
     color: var(--main-accent-color);
 }
 .modal-form-leave-a-review-input{
+    color: var(--primary-color);
+    padding-left: 18px;
     width: 100%;
     border-radius: 8px;
     border: 1.5px solid rgba(0, 0, 0, 0.03);
     background-color: var(--white-color);
+    transition: border-color var(--time-function);
+}
+.modal-form-leave-a-review-icon{
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 24px;
+    height: 24px;
+}
+.modal-icon-leave-a-review-wrap{
+    position: relative;
+}
+.modal-form-leave-a-review-input:focus{
+border-color: var(--main-accent-color);
+outline: none;
+}
+.modal-form-leave-a-review-message{
+    margin-bottom: 18px;
+    padding: 14px 18px;
+    width: 100%;
+    resize: none;
+    height: 91px;
+    border-radius: 8px;
+    border: 1.5px solid rgba(17, 17, 17, 0.05);
+    transition: border-color var(--time-function);
+}
+.modal-form-leave-a-review-message:focus{
+border-color: var(--main-accent-color);
+outline: none;
+}
+.modal-form-leave-a-review-input::placeholder{
+    font-size: 14px;
+    font-weight:400;
+    line-height: 1.2;
+    letter-spacing: -0.02em;
+}
+.modal-form-leave-a-review-message::placeholder{
+    font-size: 14px;
+    font-weight:400;
+    line-height: 1.2;
+    letter-spacing: -0.02em; 
 }
 @media screen and (max-width:767px) {
    .modal-form-leave-a-review-title.section-title{
     font-size: 20px;
 }  
+.modal-form-leave-a-review-title-wrap{
+    width: 255px;
+}
 .modal-form-leave-a-review-input{
 height: 45px;
 margin-bottom: 14px;
     }
 }
 @media screen and (min-width: 768px) {
+    .modal-leave-a-review{
+        width: 517px ;
+        height: 631px;
+    }
     .modal-form-leave-a-review-title.section-title{
         margin-bottom: 40px;
     }
-   
+    .modal-form-leave-a-review-title-wrap{
+        width: 298px;
+    }
+    .modal-form-leave-a-review-input{
+        height: 66px;
+margin-bottom: 19px;
+    }
+    .modal-form-leave-a-review-message{
+        height: 137px;
+    }
   }
