--- a/src/partials/leave-a-review.html
+++ b/src/partials/leave-a-review.html
@@ -4,9 +4,11 @@
             <button type="button" class="modal-close-leave-a-review-btn"><svg class="modal-close-icon-leave-a-review js-modal-close"  width="24" height="24">
                 <use href="../img/sprite.svg#icon-close-modal24"></use>
             </svg></button>
+            <div class="modal-form-leave-a-review-title-wrap">
+            <p class="modal-form-leave-a-review-title section-title">leave a review 
+                    about <span class="modal-leave-a-review-span">our chocolate</span> </p></div>
             <div class="modal-form-wrap-leave-a-review">
-                <p class="modal-form-leave-a-review-title section-title">leave a review 
-                    about <span class="modal-leave-a-review-span">our chocolate</span> </p>
+                
                     <form class="modal-form-leave-a-review">
                         <label class="modal-form-leave-a-review-field" >
                              
@@ -28,7 +30,7 @@
                            type="text">
                        </label>
                        <label class="modal-form-leave-a-review-field" >
-                       
+                       <div class="modal-icon-leave-a-review-wrap">
                        <input class="modal-form-leave-a-review-input" 
                        placeholder="Phone number"
                        required
@@ -36,6 +38,16 @@
                        type="tel"
                        pattern="[0-9]{3}-[0-9][3]-[0-9]{2}-[0-9]{2}"
                        title="xxx-xxx-xx-xx">
+                       <select id="cities">
+                        <option value="Ukraine">+380</option>
+                        <option value="Poland">+480</option>
+                        <option value="Germany">+490</option>
+                        
+                     </select>
+                        <span class="modal-form-leave-a-review-icon"><use class="modal-form-leave-a-review-icon-flag" >
+                        <svg href="../img/sprite.svg#icon-ukraine-flag" width="24" height="24"></svg>
+                       </use></span> 
+                    </div>
                    </label>
                    <label class="modal-form-leave-a-review-field" >
                    <textarea
@@ -44,7 +56,7 @@
                  class="modal-form-leave-a-review-message"
                    placeholder="Enter text"></textarea>
                </label>
-               <button class="modal-form-leave-a-review" type="submit">Send</button>
+               <button class="modal-form-leave-a-review btn" type="submit">Send</button>
                     </form>
             </div>
         </div>
