--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -1,6 +1,6 @@
 <section class="top-sellers section">
     <div class="top-sellers-container container">
-      <h2 id="top" class="top-sellers-title title">
+      <h2 id="top" class="section-title top-sellers-title title">
         <span class="top-sellers-title-span">TOP </span>SELLERS
       </h2>
       <ul class="top-sellers-list list">
@@ -71,7 +71,7 @@
           called Cacao. Cacao has been around for thousands of years and was first
           discovered by the Native American tribe called the Mayans.
         </p>
-        <button type="button" class="hero-btn" data-modal-open-2>
+        <button type="button" class="btn" data-modal-open-2>
           Buy now
         </button>
       </div>
