--- a/src/css/top-sellers.css
+++ b/src/css/top-sellers.css
@@ -23,7 +23,7 @@ padding-bottom: 32px;
 }
 
 .top-sellers-title-span {
-color: var(--primary-accent-color);
+color: #FD9222;
 }
 
 .top-sellers-list {
