--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,16 @@
 <header class="header container">
   <nav class="header-nav">
-    <a href="../index.html" class="header-title"
+    <a href="/index.html" class="header-title"
       ><span class="header-title two">SIMPLY</span> CHOCOLATE
     </a>
-    <a href="../index.html" class="header-logo-title">
+    <a href="/index.html" class="header-logo-title">
       <svg class="header-logo">
         <use href="/img/sprite.svg#icon-choco-logo24"></use>
       </svg>
     </a>
     <ul class="header-list">
       <li class="header-item">
-        <a href="../index.html" class="header-item-link">Home</a>
+        <a href="/index.html" class="header-item-link">Home</a>
       </li>
       <li class="header-item">
         <a href="#how-its-made" class="header-item-link">How it’s made?</a>
@@ -29,7 +29,7 @@
     </ul>
   </nav>
   <button class="header-mobile-menu-open" data-modal-open>
-    <svg class="header-mobile-menu-open-icon">
+    <svg class="header-mobile-menu-open-icon" width="28" height="28">
       <use href="/img/sprite.svg#icon-mob-burger"></use>
     </svg>
   </button>
@@ -57,7 +57,7 @@
     </button>
     <ul class="header-sidebar-list">
       <li class="header-sidebar-item">
-        <a href="../index.html" class="header-sidebar-item-link">Home</a>
+        <a href="/index.html" class="header-sidebar-item-link">Home</a>
       </li>
       <li class="header-sidebar-item">
         <a href="#how-its-made" class="header-sidebar-item-link"
