--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,28 +1,12 @@
 /* Advantages Section */
 .section.advantages {
-  background-color: #1e1823;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  margin-top: 72px;
-}
-.advantages-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.advantages-item:not(:last-child) {
-  margin-right: 70px;
-}
-.container {
-  width: 1200px;
-  padding-left: 50px;
-  padding-right: 50px;
+  background-color: var(--bgc-color);
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 .advantages-item {
-  position: relative;
-  width: 308px;
+  margin-bottom: 20px;
 }
-
 .advantages-thumb {
   height: 62px;
   width: 62px;
@@ -36,7 +20,6 @@
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 365px;
 }
-
 .advantages-caption {
   font-weight: 600;
   font-size: 18px;
@@ -48,17 +31,41 @@
   font-weight: 400;
   font-size: 14px;
   line-height: calc(17 / 14);
+  letter-spacing: -0.02em;
   color: rgba(255, 255, 255, 0.7);
 }
-
-.advantages-item:not(:last-child)::after {
-  position: absolute;
-  display: inline-block;
-  content: '';
-  bottom: 115px;
-  right: -80px;
-  width: 124px;
-  height: 0px;
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  transform: rotate(90deg);
+@media screen and (min-width: 768px) {
+  .section.advantages {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+  .advantages-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px 60px;
+  }
+  .advantages-item {
+    width: 308px;
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .advantages-list {
+    display: flex;
+    gap: 88px;
+  }
+  .advantages-item {
+    position: relative;
+  }
+  .advantages-item:not(:last-child)::after {
+    position: absolute;
+    display: inline-block;
+    content: '';
+    bottom: 122px;
+    right: -80px;
+    width: 124px;
+    height: 0px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    transform: rotate(90deg);
+  }
 }
