--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -4,6 +4,7 @@
   .hero {
     padding-left: 20px;
     padding-right: 20px;
+    padding-bottom: 72px;
   }
 
   .container.hero-container {
@@ -156,6 +157,9 @@
 }
 
 @media screen and (min-width: 768px) {
+  .hero {
+    padding-bottom: 72px;
+  }
   .container.hero-container {
     background-color: var(--secondary-color);
     max-width: 704px;
