--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -106,6 +106,11 @@
 .footer-link:focus {
   color: var(--main-accent-color);
 }
+@media screen and (max-width: 374px) {
+  .footer-wrap {
+    gap: 60px;
+  }
+}
 @media screen and (min-width: 768px) {
   .footer {
     padding-top: 50px;
