--- a/src/css/header.css
+++ b/src/css/header.css
@@ -55,7 +55,6 @@
   opacity: 1;
 }
 
-
 .header-mobile-menu-open {
   background-color: transparent;
   padding: 0;
@@ -86,7 +85,7 @@
   height: 100%;
   top: 0;
   right: 0;
-  background-color: var(--secondary-color);
+  background-color: var(--bgc-color);
   z-index: 1000;
   opacity: 0;
   visibility: hidden;
@@ -221,7 +220,6 @@
 }
 
 @media screen and (min-width: 1200px) {
-
   .header-sidebar,
   .header-mobile-menu-open,
   .header-button {
@@ -290,10 +288,8 @@
   }
 }
 
-
 .header-icons-link:hover .header-promo,
 .header-icons-link:focus .header-promo {
   fill: var(--main-accent-color);
   transform: rotate(360deg);
 }
-
