--- a/src/partials/leave-a-review.html
+++ b/src/partials/leave-a-review.html
@@ -1,7 +1,8 @@
-<section class="leave-a-review">
+
+    <button type="button" class="buttom-leave-a-review btn js-open-modal" data-modal="3" >Leave  a review</button>
     <div class="overlay-leave-a-review js-overlay-modal">
         <div class="modal-leave-a-review" data-modal="3">
-            <button type="button" class="modal-close-leave-a-review-btn"><svg class="modal-close-icon-leave-a-review js-modal-close"  width="24" height="24">
+            <button type="button" class="modal-close-leave-a-review-btn js-modal-close"><svg class="modal-close-icon-leave-a-review "  width="24" height="24">
                 <use href="../img/sprite.svg#icon-close-modal24"></use>
             </svg></button>
             <div class="modal-form-leave-a-review-title-wrap">
@@ -29,25 +30,20 @@
                            name="user-mail"
                            type="text">
                        </label>
+                       <div class="modal-leave-a-review-container">
                        <label class="modal-form-leave-a-review-field" >
                        <div class="modal-icon-leave-a-review-wrap">
-                       <input class="modal-form-leave-a-review-input" 
-                       placeholder="Phone number"
+                       <input class="modal-form-leave-a-review-input input-phone" 
+                       placeholder="+380 Phone number"
                        required
                        name="user-phone"
                        type="tel"
-                       pattern="[0-9]{3}-[0-9][3]-[0-9]{2}-[0-9]{2}"
+                       pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                        title="xxx-xxx-xx-xx">
-                       <select id="cities">
-                        <option value="Ukraine">+380</option>
-                        <option value="Poland">+480</option>
-                        <option value="Germany">+490</option>
-                        
-                     </select>
-                        <span class="modal-form-leave-a-review-icon"><use class="modal-form-leave-a-review-icon-flag" >
-                        <svg href="../img/sprite.svg#icon-ukraine-flag" width="24" height="24"></svg>
-                       </use></span> 
-                    </div>
+        <svg class="modal-form-leave-a-review-icon" >
+            <use href="../img/sprite.svg#icon-ukraine-flag"></use>
+        </svg></div>
+    
                    </label>
                    <label class="modal-form-leave-a-review-field" >
                    <textarea
@@ -62,7 +58,7 @@
         </div>
     </div>
 
-</section>
+
 
 
 
