--- a/src/partials/our-products.html
+++ b/src/partials/our-products.html
@@ -143,5 +143,8 @@
     </ul>
 
     <div class="swiper-pagination"></div>
-  </div>
+   <div className="scroll-to-top">
+        <span class="btn-up btn-up-position btn-up-style">⇧</i>
+    </div>
+  
 </section>
