--- a/src/css/our-products.css
+++ b/src/css/our-products.css
@@ -112,3 +112,56 @@
 
 @media screen and (min-width: 1200px) {
 }
+
+.scroll-to-top {
+  position: relative;
+}
+
+.btn-up-position {
+  position: fixed;
+  bottom: 40px;
+  right: 25px;
+  z-index: 20;
+}
+
+.btn-up-style {
+  background-color: var(--main-accent-color);
+  border: 1px solid inherit;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
+  color: #fff;
+  cursor: pointer;
+  animation: movebtn 3s ease-in-out infinite;
+  transition: all 0.5s ease-in-out;
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+}
+
+.btn-up:hover {
+  animation: none;
+  background: var(--main-hover-color);
+  color: var(--main-accent-color);
+  border: 1px solid var(--main-accent-color);
+}
+
+@keyframes movebtn {
+  0% {
+    transform: translateY(0px);
+  }
+  25% {
+    transform: translateY(20px);
+  }
+  50% {
+    transform: translateY(0px);
+  }
+  75% {
+    transform: translateY(-20px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
