--- a/src/partials/leave-a-review.html
+++ b/src/partials/leave-a-review.html
@@ -1,21 +1,19 @@
 
-
-<section class="leave-a-review">
-
+    <button type="button" class="buttom-leave-a-review btn js-open-modal" data-modal="3" >Leave  a review</button>
     <div class="overlay-leave-a-review js-overlay-modal">
         <div class="modal-leave-a-review" data-modal="3">
             <button type="button" class="modal-close-leave-a-review-btn js-modal-close"><svg class="modal-close-icon-leave-a-review "  width="24" height="24">
                 <use href="../img/sprite.svg#icon-close-modal24"></use>
             </svg></button>
             <div class="modal-form-leave-a-review-title-wrap">
-            <p class="modal-form-leave-a-review-title section-title">leave a review 
+            <p class="modal-form-leave-a-review-title section-title">leave a review
                     about <span class="modal-leave-a-review-span">our chocolate</span> </p></div>
             <div class="modal-form-wrap-leave-a-review">
-                
+
                     <form class="modal-form-leave-a-review">
                         <label class="modal-form-leave-a-review-field" >
-                             
-                            <input class="modal-form-leave-a-review-input" 
+
+                            <input class="modal-form-leave-a-review-input"
                             placeholder="Name"
                             required
                             name="user_name"
@@ -25,8 +23,8 @@
                             >
                         </label>
                         <label class="modal-form-leave-a-review-field" >
-                           
-                           <input class="modal-form-leave-a-review-input" 
+
+                           <input class="modal-form-leave-a-review-input"
                            placeholder="Enter your email"
                            required
                            name="user-mail"
@@ -35,7 +33,7 @@
                        <div class="modal-leave-a-review-container">
                        <label class="modal-form-leave-a-review-field" >
                        <div class="modal-icon-leave-a-review-wrap">
-                       <input class="modal-form-leave-a-review-input input-phone" 
+                       <input class="modal-form-leave-a-review-input input-phone"
                        placeholder="+380 Phone number"
                        required
                        name="user-phone"
@@ -45,12 +43,12 @@
         <svg class="modal-form-leave-a-review-icon" >
             <use href="../img/sprite.svg#icon-ukraine-flag"></use>
         </svg></div>
-    
+
                    </label>
                    <label class="modal-form-leave-a-review-field" >
                    <textarea
                    required
-                   name="user_message" 
+                   name="user_message"
                  class="modal-form-leave-a-review-message"
                    placeholder="Enter text"></textarea>
                </label>
@@ -59,11 +57,3 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
