--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -1,5 +1,5 @@
 
-
+"top-sellers"
     <div class="container ">
     <h2 class="top-sells">TOP 
        <span class="top-sells-logo">SELLERS</span> </h2>
