--- a/src/partials/leave-a-review.html
+++ b/src/partials/leave-a-review.html
@@ -1,5 +1,4 @@
-
-    <!-- <button type="button" class="buttom-leave-a-review btn js-open-modal" data-modal="3" >Leave  a review</button>
+<button type="button" class="buttom-leave-a-review btn js-open-modal" data-modal="3" >Leave  a review</button>
     <div class="overlay-leave-a-review js-overlay-modal">
         <div class="modal-leave-a-review" data-modal="3">
             <button type="button" class="modal-close-leave-a-review-btn js-modal-close"><svg class="modal-close-icon-leave-a-review "  width="24" height="24">
@@ -64,4 +63,3 @@
 
 
 
- -->
