--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,55 +1,56 @@
-
-<header class="header container">
-  <nav class="header-nav">
-    <a href="/index.html" class="header-title"
-      ><span class="header-title two">SIMPLY</span> CHOCOLATE
-    </a>
-    <a href="/index.html" class="header-logo-title">
-      <svg class="header-logo">
-        <use href="/img/sprite.svg#icon-choco-logo24"></use>
+<header class="header">
+  <div class="container page-header">
+    <nav class="header-nav">
+      <a href="/index.html" class="header-title"
+        ><span class="header-title two">SIMPLY</span> CHOCOLATE
+      </a>
+      <a href="/index.html" class="header-logo-title">
+        <svg class="header-logo">
+          <use href="/img/sprite.svg#icon-choco-logo24"></use>
+        </svg>
+      </a>
+      <ul class="header-list">
+        <li class="header-item">
+          <a href="/index.html" class="header-item-link">Home</a>
+        </li>
+        <li class="header-item">
+          <a href="#how-its-made" class="header-item-link">How it’s made?</a>
+        </li>
+        <li class="header-item">
+          <a href="#our-products" class="header-item-link">Our products</a>
+        </li>
+        <li class="header-item">
+          <a href="#top-sellers" class="header-item-link">Top sellers</a>
+        </li>
+        <li class="header-item">
+          <a href="#uniqe-components" class="header-item-link"
+            >Chocolate is loved</a
+          >
+        </li>
+      </ul>
+    </nav>
+    <button class="header-mobile-menu-open" data-modal-open>
+      <svg class="header-mobile-menu-open-icon" width="28" height="28">
+        <use href="/img/sprite.svg#icon-mob-burger"></use>
       </svg>
-    </a>
-    <ul class="header-list">
-      <li class="header-item">
-        <a href="/index.html" class="header-item-link">Home</a>
+    </button>
+    <ul class="header-icons-list">
+      <li class="header-icons-item">
+        <a href="#" class="header-icons-link">
+          <svg class="header-promo">
+            <use href="/img/sprite.svg#icon-instagram"></use>
+          </svg>
+        </a>
       </li>
-      <li class="header-item">
-        <a href="#how-its-made" class="header-item-link">How it’s made?</a>
-      </li>
-      <li class="header-item">
-        <a href="#our-products" class="header-item-link">Our products</a>
-      </li>
-      <li class="header-item">
-        <a href="#top-sellers" class="header-item-link">Top sellers</a>
-      </li>
-      <li class="header-item">
-        <a href="#uniqe-components" class="header-item-link"
-          >Chocolate is loved</a
-        >
+      <li class="header-icons-item">
+        <a href="#" class="header-icons-link">
+          <svg class="header-promo">
+            <use href="/img/sprite.svg#icon-twitter"></use>
+          </svg>
+        </a>
       </li>
     </ul>
-  </nav>
-  <button class="header-mobile-menu-open" data-modal-open>
-    <svg class="header-mobile-menu-open-icon" width="28" height="28">
-      <use href="/img/sprite.svg#icon-mob-burger"></use>
-    </svg>
-  </button>
-  <ul class="header-icons-list">
-    <li class="header-icons-item">
-      <a href="#" class="header-icons-link">
-        <svg class="header-promo">
-          <use href="/img/sprite.svg#icon-instagram"></use>
-        </svg>
-      </a>
-    </li>
-    <li class="header-icons-item">
-      <a href="#" class="header-icons-link">
-        <svg class="header-promo">
-          <use href="/img/sprite.svg#icon-twitter"></use>
-        </svg>
-      </a>
-    </li>
-  </ul>
+  </div>
   <div class="header-sidebar" data-modal>
     <button class="header-sidebar-link" data-modal-close>
       <svg class="header-sidebar-close">
@@ -96,5 +97,4 @@
       </li>
     </ul>
   </div>
-
 </header>
