--- a/src/partials/top-sellers.html
+++ b/src/partials/top-sellers.html
@@ -1,4 +1,4 @@
-<section class="section top-sellers">
+<section class="section top-sellers" id="top-sellers">
     <div class="top-sellers-container container">
       <h2 id="top" class="section-title top-sellers-title title">
         <span class="top-sellers-title-span">TOP </span>SELLERS
@@ -10,16 +10,16 @@
               <source
               srcset="/img/top-sellers/coffeeand-mobile-1x.jpg
               1x, /img/top-sellers/coffeeand-mobile-2x.jpg 2x"
-              media="(max-width: 767px)"/> 
+              media="(max-width: 767px)"/>
               <source
               srcset="/img/top-sellers/coffeeand-tablet-1x.jpg
               1x, /img/top-sellers/coffeeand-tablet-2x.jpg 2x"
-              media="(max-width: 1199px)" /> 
+              media="(max-width: 1199px)" />
               <source
               srcset="/img/top-sellers/coffeeand-desktop-1x.jpg
               1x, /img/top-sellers/coffeeand-desktop-2x.jpg 2x"
               media="(min-width: 1200px)" />
-  
+
               <img
                 class="top-sellers-pic"
                 src="/img/top-sellers/coffeeand-desktop-1x.jpg"
@@ -38,16 +38,16 @@
             <source
             srcset="/img/top-sellers/raisinand-mobile-1x.jpg 1x,
             /img/top-sellers/raisinand-mobile-2x.jpg 2x"
-            media="(max-width: 767px)" /> 
+            media="(max-width: 767px)" />
             <source
             srcset="/img/top-sellers/raisinand-tablet-1x.jpg 1x,
             /img/top-sellers/raisinand-tablet-2x.jpg 2x"
-            media="(max-width: 1199px)"  /> 
+            media="(max-width: 1199px)"  />
             <source
             srcset="/img/top-sellers/raisinand-desktop-1x.jpg
             1x, /img/top-sellers/raisinand-desktop-2x.jpg 2x"
             media="(min-width: 1200px)"  />
-  
+
             <img
               class="top-sellers-pic"
               src="/img/top-sellers/raisinand-desktop-1x.jpg"
@@ -57,11 +57,11 @@
         </li>
         <li class="top-sellers-item third-foto">
           <picture>
-            <source 
+            <source
             srcset="/img/top-sellers/chocolate-1x.jpg 1x,
             /img/top-sellers/chocolate-2x.jpg 2x" media="(min-width:
             1200px)"  />
-  
+
             <img
               class="top-sellers-pic"
               src="/img/top-sellers/chocolate-1x.jpg"
