--- a/src/partials/leave-a-review.html
+++ b/src/partials/leave-a-review.html
@@ -1,4 +1,4 @@
-<button
+<!-- <button
   type="button"
   class="buttom-leave-a-review btn js-open-modal"
   data-modal="3"
@@ -72,4 +72,4 @@
       </form>
     </div>
   </div>
-</div>
+</div> -->
