--- a/src/partials/our-products.html
+++ b/src/partials/our-products.html
@@ -142,7 +142,7 @@
       </li>
     </ul>
     <div class="swiper-pagination"></div>
-    <div className="scroll-to-top">
+    <div class="scroll-to-top">
       <span class="btn-up btn-up-position btn-up-style">⇧</span>
     </div>
   </div>
