--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -9,7 +9,7 @@
       finest ingredients and handcrafted with the utmost care, each piece is a
       work of art that is sure to please.
     </p>
-    <button type="button" class="btn btn-subscribe" data-open-modal="1">
+    <button type="button" class="btn btn-subscribe js-open-modal" data-modal="1">
       Subscribe
     </button>
   </div>
