--- a/src/partials/explore-our-new.html
+++ b/src/partials/explore-our-new.html
@@ -1,10 +1,10 @@
-
-  <div class="modal" data-modal="1">
-    <button class="modal-cross js-modal-close" data-modal="1">
-      <svg class="cross" width="24" height="24">
-        <use href="/img/sprite.svg#icon-close-modal24"></use>
-      </svg>
-    </button>
+<div class="modal" data-modal="1">
+  <button class="modal-cross js-modal-close" data-modal="1">
+    <svg class="cross" width="24" height="24">
+      <use href="/img/sprite.svg#icon-close-modal24"></use>
+    </svg>
+  </button>
+  <div class="thumb-modal-explore">
     <picture>
       <source
         media="(min-width: 768px)"
@@ -27,23 +27,25 @@
         width="538"
       />
     </picture>
-
-    <div class="subscribe-info">
-      <h2 class="section-title sub-modal-title">
-        Explore our
-        <span class="section-title-accent">new chocolate</span> first!
-      </h2>
-      <form class="subscribe-form">
-        <label class="subscribe-label">
-          <input
-            class="subscribe-mail"
-            type="email"
-            name="mail"
-            placeholder="Enter your email"
-          />
-        </label>
-        <button type="button" class="btn subscribe-modal-btn">Submit</button>
-      </form>
-    </div>
   </div>
 
+  <div class="subscribe-info">
+    <div class="subscribe-text-lines">
+      <h2 class="section-title sub-modal-title">
+        Explore our <br />
+        <span class="section-title-accent">new chocolate</span> first!
+      </h2>
+    </div>
+    <form class="subscribe-form">
+      <label class="subscribe-label">
+        <input
+          class="subscribe-mail"
+          type="email"
+          name="mail"
+          placeholder="Enter your email"
+        />
+      </label>
+      <button type="button" class="btn subscribe-modal-btn">Submit</button>
+    </form>
+  </div>
+</div>
