--- a/src/partials/unique-components.html
+++ b/src/partials/unique-components.html
@@ -1,6 +1,6 @@
 <section class="components section" id="uniqe-components">
   <div class="container">
-    <h2 class="section-title">
+    <h2 class="section-title components-title">
       IT ALL ADDS UP TO ONE EXCEPTIONAL
       <span class="section-title-accent">TASTE</span> SENSATION
     </h2>
