--- a/src/css/explore-our-new.css
+++ b/src/css/explore-our-new.css
@@ -6,8 +6,8 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  width: 311px;
-  height: 350px;
+  min-width: 311px;
+  min-height: 350px;
   border-radius: 15px;
   z-index: 30;
   background-color: var(--body-bg-color);
@@ -16,10 +16,22 @@
   transition: transform var(--time-function);
 }
 
+@media screen and (min-width: 768px) {
+.modal {
+    min-width: 538px;
+    min-height: 412px;
+}
+}
+
 .modal.active,
 .overlay.active {
   opacity: 1;
   visibility: visible;
+}
+.explore-modal-img {
+  min-width: 311px;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
 
 .modal-cross {
@@ -49,24 +61,18 @@
   text-align: left;
   font-size: 20px;
 }
-
-.thumb-modal-explore {
-  width: 311px;
-  height: 169px;
-  border-top-right-radius: 15px;
-  border-top-left-radius: 15px;
+@media screen and (min-width: 768px) {
+.section-title.sub-modal-title.section-title-accent {
+  margin-bottom: 28px;
+  font-size: 24px;
 }
-
-.thumb-modal-explore > img {
-  display: block;
-  height: 100%;
-  width: 100%;
-
-  object-fit: cover;
 }
 
 .subscribe-info {
   padding: 32px 24px;
+}
+.subscribe-wrap {
+  position: relative;
 }
 .subscribe-mail {
   padding: 14px 18px;
@@ -78,11 +84,14 @@
   box-shadow: 0 5.44px 5.44px #00000008;
   transition: border-color var(--time-function);
 }
+@media screen and (max-width: 374px) {
+}
+
 .subscribe-modal-btn {
   min-height: 45px;
   top: 89%;
-  left: 88%;
-  transform: translate(-89%, -88%) scale(1);
+  left: 99%;
+  transform: translate(-99%, -89%) scale(1);
   position: absolute;
 
   transition: transform var(--time-function);
