--- a/src/partials/explore-our-new.html
+++ b/src/partials/explore-our-new.html
@@ -4,30 +4,36 @@
       <use href="/img/sprite.svg#icon-close-modal24"></use>
     </svg>
   </button>
-  <div class="thumb-modal-explore">
-    <picture>
-      <source
-        media="(min-width: 768px)"
-        srcset="
-          /img/modal-subscribe/chocolate-md1x.jpg 1x,
-          /img/modal-subscribe/chocolate-md1x.jpg 2x
-        "
-        type="image/jpeg"
-      />
-      <source
-        media="(min-width: 375px)"
-        srcset="
-          /img/modal-subscribe/chocolate-sm1x.jpg 1x,
-          /img/modal-subscribe/chocolate-sm2x.jpg 2x
-        "
-      />
-      <img
-        src="/img/modal-subscribe/chocolate-sm1x.jpg"
-        alt="chocolate"
-        width="538"
-      />
-    </picture>
-  </div>
+  <picture>
+    <source
+      media="(min-width: 768px)"
+      srcset="
+        /img/modal-subscribe/chocolate-md1x.jpg 1x,
+        /img/modal-subscribe/chocolate-md1x.jpg 2x
+      "
+      type="image/jpeg"
+    />
+    <source
+      media="(max-width: 767px)"
+      srcset="
+        /img/modal-subscribe/chocolate-sm1x.jpg 1x,
+        /img/modal-subscribe/chocolate-sm2x.jpg 2x
+      "
+    />
+    <source
+      media="(min-width: 375px)"
+      srcset="
+        /img/modal-subscribe/chocolate-md1x.jpg 1x,
+        /img/modal-subscribe/chocolate-md1x.jpg 2x
+      "
+    />
+
+    <img
+      class="explore-modal-img"
+      src="/img/modal-subscribe/chocolate-md1x.jpg"
+      alt="chocolate"
+    />
+  </picture>
 
   <div class="subscribe-info">
     <div class="subscribe-text-lines">
@@ -36,16 +42,18 @@
         <span class="section-title-accent">new chocolate</span> first!
       </h2>
     </div>
-    <form class="subscribe-form">
-      <label class="subscribe-label">
-        <input
-          class="subscribe-mail"
-          type="email"
-          name="mail"
-          placeholder="Enter your email"
-        />
-      </label>
-      <button type="button" class="btn subscribe-modal-btn">Submit</button>
-    </form>
+    <div class="subscribe-wrap">
+      <form class="subscribe-form">
+        <label class="subscribe-label">
+          <input
+            class="subscribe-mail"
+            type="email"
+            name="mail"
+            placeholder="Enter your email"
+          />
+        </label>
+        <button type="button" class="btn subscribe-modal-btn">Submit</button>
+      </form>
+    </div>
   </div>
 </div>
