--- a/src/partials/explore-our-new.html
+++ b/src/partials/explore-our-new.html
@@ -6,6 +6,14 @@
   </button>
   <picture>
     <source
+      media="(min-width: 1200px)"
+      srcset="
+        /img/modal-subscribe/chocolate-md1x.jpg 1x,
+        /img/modal-subscribe/chocolate-md1x.jpg 2x
+      "
+      type="image/jpeg"
+    />
+    <source
       media="(min-width: 768px)"
       srcset="
         /img/modal-subscribe/chocolate-md1x.jpg 1x,
@@ -20,17 +28,10 @@
         /img/modal-subscribe/chocolate-sm2x.jpg 2x
       "
     />
-    <source
-      media="(min-width: 375px)"
-      srcset="
-        /img/modal-subscribe/chocolate-md1x.jpg 1x,
-        /img/modal-subscribe/chocolate-md1x.jpg 2x
-      "
-    />
 
     <img
       class="explore-modal-img"
-      src="/img/modal-subscribe/chocolate-md1x.jpg"
+      src="/img/modal-subscribe/chocolate-sm1x.jpg"
       alt="chocolate"
     />
   </picture>
@@ -57,3 +58,4 @@
     </div>
   </div>
 </div>
+
