--- a/src/partials/leave-a-review.html
+++ b/src/partials/leave-a-review.html
@@ -1,13 +1,7 @@
-<!-- <button
-  type="button"
-  class="buttom-leave-a-review btn js-open-modal"
-  data-modal="3"
->
-  Leave a review
-</button>
-<div class="overlay-leave-a-review js-overlay-modal">
+<!-- 
+
   <div class="modal-leave-a-review" data-modal="3">
-    <button type="button" class="modal-close-leave-a-review-btn js-modal-close">
+    <button type="button" class="modal-close-leave-a-review-btn js-modal-close" data-modal="3">
       <svg class="modal-close-icon-leave-a-review" width="24" height="24">
         <use href="../img/sprite.svg#icon-close-modal24"></use>
       </svg>
@@ -41,22 +35,25 @@
           />
         </label>
         <div class="modal-leave-a-review-container">
+           <div class="modal-icon-leave-a-review-wrap">
           <label class="modal-form-leave-a-review-field">
-            <div class="modal-icon-leave-a-review-wrap">
+           
               <input
                 class="modal-form-leave-a-review-input input-phone"
                 placeholder="+380 Phone number"
                 required
                 name="user-phone"
                 type="tel"
-                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-                title="xxx-xxx-xx-xx"
+      
+                pattern="[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xx-xxx-xx-xx"
               />
               <svg class="modal-form-leave-a-review-icon">
                 <use href="../img/sprite.svg#icon-ukraine-flag"></use>
               </svg>
-            </div>
+            
           </label>
+          </div>
           <label class="modal-form-leave-a-review-field">
             <textarea
               required
@@ -66,10 +63,10 @@
             ></textarea>
           </label>
         </div>
-        <button class="modal-form-leave-a-review btn" type="submit">
+        <button class="modal-form-leave-a-review btn" type="button">
           Send
         </button>
       </form>
     </div>
   </div>
-</div> -->
+ -->
