--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section reviews">
   <div class="container">
     <h2 class="section-title reviews">
       <span class="section-title-accent">chocolate</span> is loved
@@ -6,8 +6,8 @@
     <ul class="reviews-list">
       <li class="reviews-item">
         <img
-          srcset="../img/reviews/viktor.jpg 1x, ../img/reviews/viktor@2x.jpg 2x"
-          src="../img/reviews/victoria.jpg"
+          srcset="/img/reviews/viktor.jpg 1x, /img/reviews/viktor@2x.jpg 2x"
+          src="/img/reviews/victoria.jpg"
           alt="Victoria Dobrzhanska"
           width="80"
           height="80"
@@ -21,8 +21,8 @@
       </li>
       <li class="reviews-item">
         <img
-          srcset="../img/reviews/nazar.jpg 1x, ../img/reviews/nazar@2x.jpg 2x"
-          src="../img/reviews/nazar.jpg"
+          srcset="/img/reviews/nazar.jpg 1x, /img/reviews/nazar@2x.jpg 2x"
+          src="/img/reviews/nazar.jpg"
           alt="Nazar Babenko"
           width="80px"
           height="80px"
@@ -36,8 +36,8 @@
       </li>
       <li class="reviews-item">
         <img
-          srcset="../img/reviews/olena.jpg 1x, ../img/reviews/olena@2x.jpg 2x"
-          src="../img/reviews/olena.jpg"
+          srcset="/img/reviews/olena.jpg 1x, /img/reviews/olena@2x.jpg 2x"
+          src="/img/reviews/olena.jpg"
           alt="Olena Kampusch"
           width="80px"
           height="80px"
