--- a/src/css/reviews.css
+++ b/src/css/reviews.css
@@ -11,6 +11,25 @@
   position: relative;
 }
 
+.btn.reviews {
+  margin-top: 94px;
+
+  border: 1px solid #fd9222;
+  border-radius: 100px;
+  background-color: transparent;
+  color: var(--primary-color);
+}
+
+.btn.reviews:hover,
+.btn.reviews:focus {
+  border: 1px solid #fd9222;
+  background-color: #fd9222;
+  color: var(--white-color);
+}
+
+.section.reviews {
+  padding-top: 0px;
+}
 .reviews-item:not(:nth-child(1)) {
   display: none;
 }
@@ -73,22 +92,6 @@
 
   .reviews-item:nth-child(-n + 2) {
     display: block;
-  }
-
-  .btn.reviews {
-    margin-top: 94px;
-
-    border: 1px solid #fd9222;
-    border-radius: 100px;
-    background-color: transparent;
-    color: var(--primary-color);
-  }
-
-  .btn.reviews:hover,
-  .btn.reviews:focus {
-    border: 1px solid #fd9222;
-    background-color: #fd9222;
-    color: var(--white-color);
   }
 
   .section-title.reviews {
