--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -24,8 +24,8 @@
           srcset="/img/reviews/nazar.jpg 1x, /img/reviews/nazar@2x.jpg 2x"
           src="/img/reviews/nazar.jpg"
           alt="Nazar Babenko"
-          width="80px"
-          height="80px"
+          width="80"
+          height="80"
           class="reviews-img"
         />
         <h3 class="reviews-name">Nazar Babenko</h3>
@@ -39,8 +39,8 @@
           srcset="/img/reviews/olena.jpg 1x, /img/reviews/olena@2x.jpg 2x"
           src="/img/reviews/olena.jpg"
           alt="Olena Kampusch"
-          width="80px"
-          height="80px"
+          width="80"
+          height="80"
           class="reviews-img"
         />
         <h3 class="reviews-name">Olena Kampusch</h3>
