--- a/src/partials/leave-a-review.html
+++ b/src/partials/leave-a-review.html
@@ -37,10 +37,12 @@
         <div class="modal-leave-a-review-container">
            <div class="modal-icon-leave-a-review-wrap">
           <label class="modal-form-leave-a-review-field">
-           
+           <span class="modal-form-phone-wraper"><svg class="flag-phone" width="24" height="24">
+            <use href="../img/sprite.svg#icon-ukraine-flag"></use>
+           </svg> +380</span>
               <input
                 class="modal-form-leave-a-review-input input-phone"
-                placeholder="+380 Phone number"
+                placeholder="Phone number"
                 required
                 name="user-phone"
                 type="tel"
@@ -48,9 +50,6 @@
                 pattern="[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xx-xxx-xx-xx"
               />
-              <svg class="modal-form-leave-a-review-icon">
-                <use href="../img/sprite.svg#icon-ukraine-flag"></use>
-              </svg>
             
           </label>
           </div>
