--- a/src/css/leave-a-review.css
+++ b/src/css/leave-a-review.css
@@ -86,17 +86,34 @@
   background-color: var(--white-color);
   transition: border-color var(--time-function);
 }
-.modal-form-leave-a-review-icon {
+
+.modal-form-phone-wraper{
   position: absolute;
-  top: 10px;
-  left: 18px;
-  display: block;
-  width: 24px;
-  height: 24px;
-  
+  top: 20px;
+  left: 24px;
+  display: flex;
+  align-items: center;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.33;
+  color: rgba(0, 0, 0, 1);
+}
+.modal-form-phone-wraper::after{
+  position: absolute;
+  content: "";
+  width: 3px;
+  height: 40px;
+  top: -5px;
+  left: 100px;
+  background-color: rgba(250, 250, 250, 1);
+  border-radius: 8px;
+}
+
+.flag-phone{
+  margin-right: 18px;
 }
 .input-phone {
-  padding-left: 50px;
+  padding-left: 150px;
 }
 
 .modal-icon-leave-a-review-wrap {
