--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,10 +1,14 @@
 <header class="header">
   <div class="container page-header">
     <nav class="header-nav">
-      <a href="index.html" class="header-title"
+      <a href="index.html" class="header-title" data-aos="flip-left"
+      data-aos-easing="ease-out-cubic"
+      data-aos-duration="2000"
         ><span class="header-title two">SIMPLY</span> CHOCOLATE
       </a>
-      <a href="index.html" class="header-logo-title">
+      <a href="index.html" class="header-logo-title" data-aos="flip-left"
+      data-aos-easing="ease-out-cubic"
+      data-aos-duration="2000">
         <svg class="header-logo">
           <use href="/img/sprite.svg#icon-choco-logo24"></use>
         </svg>
