--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -7,13 +7,13 @@
 </div>
 <div class="how-its-made-list-wrap"> 
     
-<h3 class="how-its-made-list-title" id="list-title"  >Try  our chocolates today and discover the perfect balance of flavor</h3>
+<h3 class="how-its-made-list-title" id="list-title"   >Try  our chocolates today and discover the perfect balance of flavor</h3>
 <ul class="how-its-made-list">
-    <li class="how-its-made-item">Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.</li>
-<li class="how-its-made-item" >At the same time, prepare a water bath. Melt the butter on it.</li>
-<li class="how-its-made-item">"Mix" the milk mixture and already liquid butter. Mix thoroughly with a silicone spatula so that the mass becomes uniform and silky.</li>
-<li class="how-its-made-item" >Heat the mixture over low heat, letting it barely boil.</li>
-<li class="how-its-made-item" >Pour the chocolate into special containers (can be replaced with ice molds). Allow to cool and harden.</li></ul>
+    <li class="how-its-made-item" data-aos="fade-up" data-aos-delay="100" data-aos-duration="2000">Heat the milk in a saucepan without bringing it to a boil. Add sugar and cocoa powder.</li>
+<li class="how-its-made-item" data-aos="fade-up" data-aos-delay="300" data-aos-duration="2000">At the same time, prepare a water bath. Melt the butter on it.</li>
+<li class="how-its-made-item" data-aos="fade-up" data-aos-delay="500" data-aos-duration="2000">"Mix" the milk mixture and already liquid butter. Mix thoroughly with a silicone spatula so that the mass becomes uniform and silky.</li>
+<li class="how-its-made-item" data-aos="fade-up" data-aos-delay="700" data-aos-duration="2000">Heat the mixture over low heat, letting it barely boil.</li>
+<li class="how-its-made-item" data-aos="fade-up" data-aos-delay="900" data-aos-duration="2000">Pour the chocolate into special containers (can be replaced with ice molds). Allow to cool and harden.</li></ul>
 </div> 
 </div>
   </div> 
