--- a/src/partials/explore-our-new.html
+++ b/src/partials/explore-our-new.html
@@ -1,4 +1,4 @@
-<div class="modal" data-modal="1">
+<div class="modal explore" data-modal="1">
   <button class="modal-cross js-modal-close" data-modal="1">
     <svg class="cross" width="24" height="24">
       <use href="/img/sprite.svg#icon-close-modal24"></use>
@@ -9,7 +9,7 @@
       media="(min-width: 1200px)"
       srcset="
         /img/modal-subscribe/chocolate-md1x.jpg 1x,
-        /img/modal-subscribe/chocolate-md1x.jpg 2x
+        /img/modal-subscribe/chocolate-md2x.jpg 2x
       "
       type="image/jpeg"
     />
@@ -17,7 +17,7 @@
       media="(min-width: 768px)"
       srcset="
         /img/modal-subscribe/chocolate-md1x.jpg 1x,
-        /img/modal-subscribe/chocolate-md1x.jpg 2x
+        /img/modal-subscribe/chocolate-md2x.jpg 2x
       "
       type="image/jpeg"
     />
@@ -58,4 +58,3 @@
     </div>
   </div>
 </div>
-
