--- a/src/css/leave-a-review.css
+++ b/src/css/leave-a-review.css
@@ -1,42 +1,31 @@
 /* Leave-A-Review Modal Window */
 
-/* .overlay-leave-a-review {
+.modal {
   opacity: 0;
   visibility: hidden;
 
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 999;
-  transition: ;
-} */
-.modal-leave-a-review {
-   /* opacity: 0;
-  visibility: hidden; */
-
-  padding: 32px 24px;
   border-radius: 15px;
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 311px;
-  height: 471px;
   z-index: 30;
   background-color: var(--body-bg-color);
   box-shadow: var(--modal-shadow);
   transition: transform var(--time-function);
 }
-@media screen and (min-width: 768px){
-  .modal-leave-a-review{
-    width: 517px;
-  height: 631px;
+.modal.review {
+  min-width: 311px;
+  min-height: 471px;
+  padding: 32px 24px;
+}
+@media screen and (min-width: 768px) {
+  .modal.review {
+    min-width: 517px;
+    min-height: 631px;
   }
 }
-.modal.leave-a-review.active,
+.modal.active,
 .overlay.active {
   opacity: 1;
   visibility: visible;
@@ -45,12 +34,9 @@
   position: absolute;
   top: 14px;
   right: 14px;
-  /* width: 24px;
-    height: 24px; */
   background-color: transparent;
   border-radius: 50%;
   border-color: transparent;
-  /* border: none; */
   padding: 0;
   transition: background-color var(--time-function);
 }
@@ -87,7 +73,7 @@
   transition: border-color var(--time-function);
 }
 
-.modal-form-phone-wraper{
+.modal-form-phone-wraper {
   position: absolute;
   top: 20px;
   left: 24px;
@@ -98,9 +84,9 @@
   line-height: 1.33;
   color: rgba(0, 0, 0, 1);
 }
-.modal-form-phone-wraper::after{
+.modal-form-phone-wraper::after {
   position: absolute;
-  content: "";
+  content: '';
   width: 3px;
   height: 40px;
   top: -5px;
@@ -109,7 +95,7 @@
   border-radius: 8px;
 }
 
-.flag-phone{
+.flag-phone {
   margin-right: 18px;
 }
 .input-phone {
@@ -180,7 +166,7 @@
   .modal-form-leave-a-review-message {
     height: 137px;
   }
-  .modal-form-leave-a-review-icon{
+  .modal-form-leave-a-review-icon {
     top: 20px;
   }
 }
