--- a/src/partials/leave-a-review.html
+++ b/src/partials/leave-a-review.html
@@ -1,71 +1,71 @@
-<!-- 
-
-  <div class="modal-leave-a-review" data-modal="3">
-    <button type="button" class="modal-close-leave-a-review-btn js-modal-close" data-modal="3">
-      <svg class="modal-close-icon-leave-a-review" width="24" height="24">
-        <use href="../img/sprite.svg#icon-close-modal24"></use>
-      </svg>
-    </button>
-    <div class="modal-form-leave-a-review-title-wrap">
-      <p class="modal-form-leave-a-review-title section-title">
-        leave a review about
-        <span class="modal-leave-a-review-span">our chocolate</span>
-      </p>
-    </div>
-    <div class="modal-form-wrap-leave-a-review">
-      <form class="modal-form-leave-a-review">
-        <label class="modal-form-leave-a-review-field">
-          <input
-            class="modal-form-leave-a-review-input"
-            placeholder="Name"
-            required
-            name="user_name"
-            type="text"
-            pattern="^[a-zA-Zа-яА-Я]+"
-            minlength="2"
-          />
-        </label>
-        <label class="modal-form-leave-a-review-field">
-          <input
-            class="modal-form-leave-a-review-input"
-            placeholder="Enter your email"
-            required
-            name="user-mail"
-            type="text"
-          />
-        </label>
-        <div class="modal-leave-a-review-container">
-           <div class="modal-icon-leave-a-review-wrap">
+<div class="modal review" data-modal="2">
+  <button
+    type="button"
+    class="modal-close-leave-a-review-btn js-modal-close"
+    data-modal="2"
+  >
+    <svg class="modal-close-icon-leave-a-review" width="24" height="24">
+      <use href="../img/sprite.svg#icon-close-modal24"></use>
+    </svg>
+  </button>
+  <div class="modal-form-leave-a-review-title-wrap">
+    <p class="modal-form-leave-a-review-title section-title">
+      leave a review about
+      <span class="modal-leave-a-review-span">our chocolate</span>
+    </p>
+  </div>
+  <div class="modal-form-wrap-leave-a-review">
+    <form class="modal-form-leave-a-review">
+      <label class="modal-form-leave-a-review-field">
+        <input
+          class="modal-form-leave-a-review-input"
+          placeholder="Name"
+          required
+          name="user_name"
+          type="text"
+          pattern="^[a-zA-Zа-яА-Я]+"
+          minlength="2"
+        />
+      </label>
+      <label class="modal-form-leave-a-review-field">
+        <input
+          class="modal-form-leave-a-review-input"
+          placeholder="Enter your email"
+          required
+          name="user-mail"
+          type="text"
+        />
+      </label>
+      <div class="modal-leave-a-review-container">
+        <div class="modal-icon-leave-a-review-wrap">
           <label class="modal-form-leave-a-review-field">
-           <span class="modal-form-phone-wraper"><svg class="flag-phone" width="24" height="24">
-            <use href="../img/sprite.svg#icon-ukraine-flag"></use>
-           </svg> +380</span>
-              <input
-                class="modal-form-leave-a-review-input input-phone"
-                placeholder="Phone number"
-                required
-                name="user-phone"
-                type="tel"
-      
-                pattern="[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-                title="xx-xxx-xx-xx"
-              />
-            
-          </label>
-          </div>
-          <label class="modal-form-leave-a-review-field">
-            <textarea
+            <span class="modal-form-phone-wraper"
+              ><svg class="flag-phone" width="24" height="24">
+                <use href="../img/sprite.svg#icon-ukraine-flag"></use>
+              </svg>
+              +380</span
+            >
+            <input
+              class="modal-form-leave-a-review-input input-phone"
+              placeholder="Phone number"
               required
-              name="user_message"
-              class="modal-form-leave-a-review-message"
-              placeholder="Enter text"
-            ></textarea>
+              name="user-phone"
+              type="tel"
+              pattern="[0-9]{2}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+              title="xx-xxx-xx-xx"
+            />
           </label>
         </div>
-        <button class="modal-form-leave-a-review btn" type="button">
-          Send
-        </button>
-      </form>
-    </div>
+        <label class="modal-form-leave-a-review-field">
+          <textarea
+            required
+            name="user_message"
+            class="modal-form-leave-a-review-message"
+            placeholder="Enter text"
+          ></textarea>
+        </label>
+      </div>
+      <button class="modal-form-leave-a-review btn" type="button">Send</button>
+    </form>
   </div>
- -->
+</div>
