--- a/src/partials/leave-a-review.html
+++ b/src/partials/leave-a-review.html
@@ -5,7 +5,7 @@
     data-modal="2"
   >
     <svg class="modal-close-icon-leave-a-review" width="24" height="24">
-      <use href="../img/sprite.svg#icon-close-modal24"></use>
+      <use href="/img/sprite.svg#icon-close-modal24"></use>
     </svg>
   </button>
   <div class="modal-form-leave-a-review-title-wrap">
@@ -41,7 +41,7 @@
           <label class="modal-form-leave-a-review-field">
             <span class="modal-form-phone-wraper"
               ><svg class="flag-phone" width="24" height="24">
-                <use href="../img/sprite.svg#icon-ukraine-flag"></use>
+                <use href="/img/sprite.svg#icon-ukraine-flag"></use>
               </svg>
               +380</span
             >
